--- a/src/app/form/dialog/dialog.html
+++ b/src/app/form/dialog/dialog.html
@@ -1,29 +1,27 @@
 <h1 mat-dialog-title>Add/Edit Field</h1>
 <div mat-dialog-content>
-  <form class="form-horizontal" [formGroup]="questionData">
-    <fieldset>
+  <form class="form-horizontal">
       <mat-form-field>
-        <mat-label for="question">Question</mat-label>
-        <input matInput type="text" formControl="question" id="question">
-        <mat-hint>What do you want to measure?</mat-hint>
+        <input matInput type="text" [formControl]="question" id="question" placeholder="Question">
+        <mat-hint align="start">What do you want to measure?</mat-hint>
       </mat-form-field>
       <mat-form-field>
-        <mat-label for="type">Type</mat-label>
-        <mat-select formControl="type" id="type" placeholder="Field Type">
+        <h4>Type</h4>
+        <mat-select [formControl]="type" id="type" placeholder="Field Type">
           <mat-option *ngFor="let t of types" [(value)]="t.value">
             {{ t.viewValue }}
           </mat-option>
         </mat-select>
       </mat-form-field>
       <mat-form-field>
-        <mat-label for="order">Order</mat-label>
-        <input matInput type="number" formControl="order" id="order" placeholder="0">
-        <mat-hint>The order each field appears in, sorted in ascending order. (0 means it will be shown first)</mat-hint>
+        <h4>Order</h4>
+        <input matInput type="number" [formControl]="order" id="order" placeholder="0">
+        <mat-hint align="start">The order each field appears in, sorted in ascending order. (0 means it will be shown first)</mat-hint>
       </mat-form-field>
 
       <div *ngIf="needsOptions()">
-        <div *ngIf="data.options">
-          <div *ngFor="let option of data.options; index as i">
+        <div *ngIf="options">
+          <div *ngFor="let option of options; index as i">
             <p>Option:
                 <br />Display Name: {{ option.helperText }}
                 <br />Value: {{ option.value }}
@@ -32,16 +30,16 @@
           </div>
         </div>
         <div *ngIf="addAnOption">
-          <form class="form-horizontal" formControl="options">
+          <form class="form-horizontal">
             <mat-form-field>
-              <mat-label for="helperText">Display Name</mat-label>
-              <input matInput type="text" formControl="helperText" id="helperText">
-              <mat-hint>Text to show for this option</mat-hint>
+              <h4>Display Name</h4>
+              <input matInput type="text" [formControl]="optionsHelperText" id="helperText">
+              <mat-hint align="start">Text to show for this option</mat-hint>
             </mat-form-field>
             <mat-form-field>
-              <mat-label for="optionValue">Value</mat-label>
-              <input matInput type="number" formControl="optionValue" id="optionValue">
-              <mat-hint>Value of this option (number)</mat-hint>
+              <h4>Value</h4>
+              <input matInput type="number" [formControl]="optionsValue" id="optionValue">
+              <mat-hint align="start">Value of this option (number)</mat-hint>
             </mat-form-field>
             <button mat-button (click)="toggleAddAnOption()">Cancel</button>
             <button mat-button color="primary" (click)="addOption()" cdkFocusInitial>Save</button>
@@ -53,26 +51,25 @@
       </div>
 
       <mat-form-field>
-        <mat-label for="maxValue">Maximum Value</mat-label>
+        <h4>Maximum Value</h4>
         <input matInput type="number" formControl="maxValue" id="maxValue">
-        <mat-hint>What's the highest possible score for this field? (before multiplier is applied?)</mat-hint>
+        <mat-hint align="start">What's the highest possible score for this field? (before multiplier is applied?)</mat-hint>
       </mat-form-field>
       <mat-form-field>
-        <mat-label for="value">Default Value</mat-label>
+        <h4>Default Value</h4>
         <input matInput type="number" formControl="value" id="value">
-        <mat-hint>What's the default value for this field? (before multiplier is applied?)</mat-hint>
+        <mat-hint align="start">What's the default value for this field? (before multiplier is applied?)</mat-hint>
       </mat-form-field>
       <mat-form-field>
-        <mat-label for="multiplier">Multiplier</mat-label>
+        <h4>Multiplier</h4>
         <input matInput type="number" formControl="multiplier" id="multiplier">
-        <mat-hint>How important is this, relative to other items? (field score is multiplied by this number - defaults to 1)</mat-hint>
+        <mat-hint align="start">How important is this, relative to other items? (field score is multiplied by this number - defaults to 1)</mat-hint>
       </mat-form-field>
       <mat-form-field>
-        <mat-label for="disabled">Disable this field?</mat-label>
-        <mat-slide-toggle formControl="disabled" id="disabled">Disable</mat-slide-toggle>
-        <mat-hint>By default, fields are enabled. Disabled fields are not counted in the scoring process.</mat-hint>
+        <h4>Disable this field?</h4>
+        <mat-slide-toggle formControl="disabled" id="disabled">Disable field</mat-slide-toggle>
+        <mat-hint align="start">By default, fields are enabled. Disabled fields are not counted in the scoring process.</mat-hint>
       </mat-form-field>
-    </fieldset>
   </form>
 
   <p>Please note: you must still save the form after saving the field.</p>
