--- a/src/app/form/dialog/dialog.html
+++ b/src/app/form/dialog/dialog.html
@@ -2,20 +2,20 @@
 <div mat-dialog-content>
   <form class="form-horizontal">
       <mat-form-field>
-        <input matInput type="text" [formControl]="question" id="question" placeholder="Question" />
+        <input matInput type="text" [(ngModel)]="question" id="question" placeholder="Question">
         <mat-hint align="start">What do you want to measure?</mat-hint>
       </mat-form-field>
       <mat-form-field>
         <h4>Type</h4>
-        <select mat-select matSelect [formControl]="type" id="type" placeholder="Field Type">
-          <option mat-option *ngFor="let t of types" [(value)]="t.value">
+        <mat-select [(ngModel)]="type" id="type" placeholder="Field Type">
+          <mat-option *ngFor="let t of types" [(value)]="t.value">
             {{ t.viewValue }}
-          </option>
-        </select>
+          </mat-option>
+        </mat-select>
       </mat-form-field>
       <mat-form-field>
         <h4>Order</h4>
-        <input matInput type="number" [formControl]="order" id="order" placeholder="0" />
+        <input matInput type="number" [(ngModel)]="order" id="order" placeholder="0">
         <mat-hint align="start">The order each field appears in, sorted in ascending order. (0 means it will be shown first)</mat-hint>
       </mat-form-field>
 
@@ -33,12 +33,12 @@
           <form class="form-horizontal">
             <mat-form-field>
               <h4>Display Name</h4>
-              <input matInput type="text" [formControl]="optionsHelperText" id="helperText" />
+              <input matInput type="text" [(ngModel)]="optionsHelperText" id="helperText">
               <mat-hint align="start">Text to show for this option</mat-hint>
             </mat-form-field>
             <mat-form-field>
               <h4>Value</h4>
-              <input matInput type="number" [formControl]="optionsValue" id="optionValue" />
+              <input matInput type="number" [(ngModel)]="optionsValue" id="optionValue">
               <mat-hint align="start">Value of this option (number)</mat-hint>
             </mat-form-field>
             <br />
@@ -47,28 +47,28 @@
           </form>
         </div>
         <div *ngIf="!addAnOption">
+          <h4>Options</h4>
           <button type="button" mat-button color="primary" (click)="toggleAddAnOption()">Add an option</button>
         </div>
       </div>
 
       <mat-form-field>
         <h4>Maximum Value</h4>
-        <input matInput type="number" formControl="maxValue" id="maxValue" />
+        <input matInput type="number" [(ngModel)]="maxValue" id="maxValue">
         <mat-hint align="start">What's the highest possible score for this field? (before multiplier is applied?)</mat-hint>
       </mat-form-field>
       <mat-form-field>
         <h4>Default Value</h4>
-        <input matInput type="number" formControl="value" id="value" />
+        <input matInput type="number" [(ngModel)]="value" id="value">
         <mat-hint align="start">What's the default value for this field? (before multiplier is applied?)</mat-hint>
       </mat-form-field>
       <mat-form-field>
         <h4>Multiplier</h4>
-        <input matInput type="number" formControl="multiplier" id="multiplier" />
+        <input matInput type="number" [(ngModel)]="multiplier" id="multiplier">
         <mat-hint align="start">How important is this, relative to other items? (field score is multiplied by this number - defaults to 1)</mat-hint>
       </mat-form-field>
-      <mat-form-field>
-        <h4>Disable this field?</h4>
-        <input mat-slide-toggle matSlideToggle formControl="disabled" id="disabled" />
+      <mat-form-field floatLabel="Disable this field?">
+        <mat-slide-toggle [(ngModel)]="disabled" id="disabled"></mat-slide-toggle>
         <mat-hint align="start">By default, fields are enabled. Disabled fields are not counted in the scoring process.</mat-hint>
       </mat-form-field>
   </form>
