--- a/src/app/form/dialog/dialog.html
+++ b/src/app/form/dialog/dialog.html
@@ -1,23 +1,17 @@
 <h1 mat-dialog-title>Add/Edit Field</h1>
 <div mat-dialog-content>
   <form class="form-horizontal">
-      <mat-form-field>
         <input matInput type="text" [(ngModel)]="question" name="question" placeholder="Question">
         <mat-hint align="start">What do you want to measure?</mat-hint>
-      </mat-form-field>
-      <mat-form-field>
         <h4>Type</h4>
         <mat-select [(ngModel)]="type" name="type" placeholder="Field Type">
           <mat-option *ngFor="let t of types" [(value)]="t.value">
             {{ t.viewValue }}
           </mat-option>
         </mat-select>
-      </mat-form-field>
-      <mat-form-field>
         <h4>Order</h4>
         <input matInput type="number" [(ngModel)]="order" name="order" placeholder="0">
         <mat-hint align="start">The order each field appears in, sorted in ascending order. (0 means it will be shown first)</mat-hint>
-      </mat-form-field>
 
       <div *ngIf="needsOptions()">
         <div *ngIf="!addAnOption">
@@ -33,16 +27,12 @@
             </div>
           <div *ngIf="addAnOption">
               <form class="form-horizontal" style="border:1px solid grey; padding:20px;">
-                <mat-form-field>
                   <h4>Display Name</h4>
                   <input matInput type="text" [(ngModel)]="optionsHelperText" name="helperText">
                   <mat-hint align="start">Text to show for this option</mat-hint>
-                </mat-form-field>
-                <mat-form-field>
                   <h4>Value</h4>
                   <input matInput type="number" [(ngModel)]="optionsValue" name="optionValue">
                   <mat-hint align="start">Value of this option (number)</mat-hint>
-                </mat-form-field>
                 <br /><br />
                 <button type="button" mat-button (click)="toggleAddAnOption()">Cancel</button>
                 <button type="button" mat-button color="primary" (click)="addOption()" cdkFocusInitial>Save</button>
@@ -51,27 +41,18 @@
           <button type="button" mat-button color="primary" (click)="toggleAddAnOption()">Add an option</button>
         </div>
       </div>
-
-      <mat-form-field>
         <h4>Maximum Value</h4>
         <input matInput type="number" [(ngModel)]="maxValue" name="maxValue">
         <mat-hint align="start">What's the highest possible score for this field? (before multiplier is applied?)</mat-hint>
-      </mat-form-field>
-      <mat-form-field>
         <h4>Default Value</h4>
         <input matInput type="number" [(ngModel)]="value" name="value">
         <mat-hint align="start">What's the default value for this field? (before multiplier is applied?)</mat-hint>
-      </mat-form-field>
-      <mat-form-field>
         <h4>Multiplier</h4>
         <input matInput type="number" [(ngModel)]="multiplier" name="multiplier">
         <mat-hint align="start">How important is this, relative to other items? (field score is multiplied by this number - defaults to 1)</mat-hint>
-      </mat-form-field>
-      <mat-form-field>
         <h4>Disable this field?</h4>
         <mat-slide-toggle [(ngModel)]="disabled" name="disabled"></mat-slide-toggle>
-        <mat-hint align="start">By default, fields are enabled. Disabled fields are not counted in the scoring process.</mat-hint>
-      </mat-form-field>
+        <p>By default, fields are enabled. Disabled fields are not counted in the scoring process.</p>
   </form>
 
   <p>Please note: you must still save the form after saving the field.</p>
