--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,11 +7,18 @@ a {
 }
 .background-block{
   position: absolute;
-  top:0;
-  height: 550px;
-  width:100%;
+  top: 0;
+  right: 0;
+  height: 450px;
+  width: 100%;
+  z-index: -1;
 }
 .calm{
   background: lightblue; /* For browsers that do not support gradients */
-  background: linear-gradient(to bottom, lightblue, lightgreen);
+  background: linear-gradient(to bottom, white, lightblue, white);
+}
+.green{
+  top: 450px;
+  background: lightblue; /* For browsers that do not support gradients */
+  background: linear-gradient(to bottom, lightblue, #b2f3eb, lightblue);
 }
