--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -51,10 +51,10 @@
       <div *ngFor="let field of fields; index as i">
         <tr>
           <td class="formIconColumn">
-            <mat-icon aria-label="Delete" aria-hidden="true" (click)="removeField(i)">delete</mat-icon>
+            <mat-icon class="greytext" aria-label="Delete" aria-hidden="true" (click)="removeField(i)">delete</mat-icon>
           </td>
           <td class="formIconColumn">
-            <mat-icon aria-label="Field Type" aria-hidden="true" [innerHtml]="getTypeIcon(field.type)"></mat-icon>
+            <mat-icon style="color:#3e7ca7" aria-label="Field Type" aria-hidden="true" [innerHtml]="getTypeIcon(field.type)"></mat-icon>
           </td>
           <td>{{ field.question || "Cannot read field name." }}</td>
           <td class="formIconColumn">
