--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -69,7 +69,7 @@
     <app-ui-loader [visible]="true"></app-ui-loader>
   </div>
   <br />
-  <button type="button" mat-raised-button>
+  <button type="button" mat-raised-button (click)="loadFormOptions()">
     Cancel
   </button>
   <button type="button" mat-raised-button color="primary" (click)="saveForm()">
