--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -31,9 +31,9 @@
   background-color: #ffffff !important;
 }
 .mat-dialog-content{
-  max-height: 25vh;
-  overflow-y: scroll;
+  max-height: 25vh !important;
+  overflow-y: scroll !important;
 }
 .mat-dialog-actions .mat-button+.mat-button{
-  border: 1px solid #673ab7;
+  border: 1px solid #673ab7 !important;
 }
