--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -20,20 +20,20 @@
 <div *ngIf="dataReady && formReady">
   <form class="form" onsubmit="saveItem()">
     <mat-form-field>
-      <input matInput [placeholder]="'Address:'" [(ngModel)]="item.address">
+      <input matInput name="address" [placeholder]="'Address:'" [(ngModel)]="item.address">
     </mat-form-field>
-    <button mat-fab title="Item score updates on save">{{ item.score || '0' }}%</button>
+    <button mat-fab title="Item score updates on save">{{ item.score || '?' }}%</button>
     <div *ngFor="let field of item.form.fields">
       <div *ngIf="field.type === 'text' && field.enabled">
         <p>{{ field.question }}</p>
         <mat-form-field>
-          <input matInput [placeholder]="field.value" [(ngModel)]="field.value">
+          <input matInput name="textfield" [placeholder]="field.value" [(ngModel)]="field.value">
         </mat-form-field>
       </div>
       <div *ngIf="field.type === 'radio' && field.enabled">
         <p>{{ field.question }}</p>
         <mat-form-field>
-          <mat-radio-group *ngFor="let optionR of field.options" class="column-layout" [(ngModel)]="field.value">
+          <mat-radio-group name="radiofield" *ngFor="let optionR of field.options" class="column-layout" [(ngModel)]="field.value">
             <mat-radio-button [value]="optionR.value">{{ optionR.helperText }}</mat-radio-button>
           </mat-radio-group>
         </mat-form-field>
@@ -42,20 +42,20 @@
         <p>{{ field.question }}</p>
         <mat-form-field>
           <div *ngFor="let optionC of field.options" class="column-layout">
-            <mat-checkbox [(ngModel)]="optionC.value">{{ optionC.helperText }}</mat-checkbox>
+            <mat-checkbox name="checkboxfield" [(ngModel)]="optionC.value">{{ optionC.helperText }}</mat-checkbox>
           </div>
         </mat-form-field>
       </div>
       <div *ngIf="field.type === 'switch' && field.enabled">
         <p>{{ field.question }}</p>
         <mat-form-field>
-          <mat-slide-toggle [(ngModel)]="field.value"></mat-slide-toggle>
+          <mat-slide-toggle name="switchfield" [(ngModel)]="field.value"></mat-slide-toggle>
         </mat-form-field>
       </div>
       <div *ngIf="field.type === 'select' && field.enabled">
         <p>{{ field.question }}</p>
         <mat-form-field>
-          <mat-select placeholder="Click to select..." [(value)]="field.value">
+          <mat-select placeholder="Click to select..." name="selectfield" [(value)]="field.value">
             <mat-option *ngFor="let option of field.options" [value]="option.value">
               {{ option.helperText }}
             </mat-option>
